Adjusted grid for tech section so images wrap, fixed contact-form spacing / alignment

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -217,7 +217,7 @@ header {
 
         .content {
             width: 100%;
-            
+
             h3 {
                 font-weight: 700;
                 text-transform: uppercase;
@@ -276,20 +276,12 @@ header {
                 
                 .tech-list {
                     display: grid;
-                    grid-template-columns: repeat(7, 1fr);
-                    max-width: 100%;
+                    grid-template-columns: repeat(auto-fill, minmax(40px, 100px));
                     margin: 0px 0px 30px 0px;
                     align-items: center;
 
                     .logo-container {
                         margin: 10px;
-                        max-height: 50%;
-                        max-width: 60%;
-                        @media only screen and (max-width: 415px) {
-                            max-height: 100%;
-                            max-width: 100%;
-                        }
-                        
                     }
                 }
             }
@@ -427,7 +419,7 @@ header {
             margin: 0px 20px;
         }
         padding: 10px;
-        width: 90%;
+        width: 100%;
 
         h3 {
             font-weight: 700;
@@ -444,80 +436,78 @@ header {
              "h3 h3"
              "contact-form content";
             grid-column-gap: 4%;
+            margin-right: 40px;
             @media only screen and (max-width: 415px) {
                 grid-template-columns: 1fr;
-                grid-template-areas: "h3" "contact-form" "content";
-                // width: 85%;
+                grid-template-areas: 
+                "h3" 
+                "contact-form" 
+                "content";
             }
 
             
-            .contact-form {
+            .contactform {
                 background-color: $gainsboro;
                 border-radius: 6px;
-                flex-direction: column;
-                justify-content: center;
-                flex-grow: 2;
-                margin: 0rem;
+                margin: 0em;
                 @media only screen and (max-width: 415px) {
-                    margin: 0 0.5em;
-                }
-                width: 100%;
-
-                form input, textarea {
-                    margin: 0.75em 0;
-                    font-size: 1rem;
-                    border: $gunmetal solid 0.5px;
-                    border-radius: 6px;
+                    margin: 0.5em;
                 }
 
-                .name, .email, .message {
-                    margin: 10px 2%;
-                }
-                    
-                .input-name, .input-email {
-                    width: 80%;
-                    height: 20px;
-                    margin-left: 0px;
-                }
-
-                label {
-                    display: inline-block
-                }
-
-                .message {
-
-                    .input-message {
-                        
-                        height: 10em;
-                    }
-                }
-
+                .form-container {
+                    grid-area: contactform;
+                    display: grid;
+                    grid-template-columns: 100px auto;
+                    grid-gap: 0.5rem 0.5rem;
+                    align-items: end;
+                    padding: 3% 3% 1.5% 3%;
+                    border-radius: 15px;
+                    font-size: 0.9em;
                 
-                form label {
-                    margin: 0 5% 0 0;
-                }
-
-                .button {
-                    margin: 2%;
-                }
-
-                form button {
-                    padding: 0.75rem 1.25rem;
-                    font-size: 1rem;
-                    @media only screen and (max-width: 415px) {
-                        padding: 0.75rem;
-                        font-size: 0.83em;
+                    label {
+                        display: inline-block;
+                        grid-column: 1 / 2;
+                        align-self: center;
                     }
-                    background-color: #59A9C2;
-                    color: white;
-                    border: none;
-                    
-                    transition: all 1s ease;
-                    outline: none;
-                }
 
-                form button:hover {
-                    background-color: $blue;
+                    .input-name, .input-email, textarea {
+                        appearance: none;
+                        margin: 0.75em 0;
+                        font-size: 1rem;
+                        border: $gunmetal solid 0.5px;
+                        border-radius: 6px;
+                        
+                    }
+
+                    textarea {
+                        height: 10em;
+                        grid-column: span 2;
+                        align-self: start;
+                    }
+
+                    .button {
+                        margin: 2% 0;
+                        grid-column: 1 / 3;
+
+                        button {
+                            padding: 0.75rem 1.25rem;
+                            font-size: 1rem;
+                            background-color: #59A9C2;
+                            color: white;
+                            border: none;
+                            transition: all 1s ease;
+                            outline: none;
+
+                            @media only screen and (max-width: 415px) {
+                                padding: 0.75rem;
+                                font-size: 0.83em;
+                            }
+                        }
+
+                        button:hover {
+                            background-color: $blue;
+                        }
+                    }
                 }
             }
             
@@ -527,7 +517,7 @@ header {
 
                 h4 {
                     font-size: 1.5rem;
-                    margin: 10px 0 10px 0;
+                    margin: 10px 0px;
                     text-align: center;
                 }
 
@@ -586,23 +576,21 @@ header {
 
 #footer {
     background-color: whitesmoke;
-    display: flex;
     
     .footer-content {
-        flex-direction: row;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: 0.1fr .9fr;
         margin: 1%;
-        margin-left: 40px;
-        margin-right: 40px;
+        margin: 0 40px;
         @media only screen and (max-width: 415px) {
-            margin-left: 20px;
-            margin-right: 20px;
+            margin: 0 20px;
         }
         
         .logo-container {
             .logo-grid {
                 display: grid;
-                grid-template-columns: repeat(2, 15%);
+                grid-template-columns: repeat(auto-fill, minmax(10px, 25px));
+                margin: 20px 0px;
 
                 .logo {
                     vertical-align: text-top;
@@ -618,7 +606,8 @@ header {
         .copyright {
             width: 100%;
             p {
-                margin: 0;
+                text-align: end;
+                margin: 20px 0px;
                 color: $gunmetal;
                 size: 0.5rem;
                 opacity: 0.15;
